# TheWriterAndReader-tools

./: .gitignore  AGENTS.md  PLANS.md  README.md  STRUCTURE_REVIEW.md  checklist.md  config.example.yaml  project.example.yaml  pyproject.toml  requirements.txt
cli/: __init__.py  twr.py
cli/commands/: __init__.py  config.py  doctor.py  doctor_legacy.py  publish.py  review.py  setup.py  web.py  wizard.py  write.py
docs/: multi-device-workflow.md  web-auth.md  writing-tools-roadmap.md
docs/prompt-assets/: prompt-asset-spec.md
scripts/: start_twr_web.command
shared/: __init__.py
shared/config/: README.md
shared/lib/: __init__.py  acceptance_contract.py  chapter_context.py  codex_cli_runner.py  config_loader.py  context_utils.py  git_utils.py  legacy_novel.py  local_cli_runner.py  model_router.py  ollama_check.py  ollama_client.py  online_api_runner.py  path_rules.py  relationship_graph.py  review_handoff.py  review_parser.py  revision_evidence.py  run_provenance.py  safe_write.py  scene_contract.py  scene_skeleton.py  series_loader.py  story_loader.py  user_settings.py  workspace_loader.py  (+1 more)
tests/: prompt-assets.test.mjs  run_tests.sh  test_accept_draft.py  test_chapter_quality_workflow.py  test_codex_cli_runner.py  test_codex_review_routing.py  test_doctor_codex.py  test_local_structured_generation.py  test_mvp_flow.py  test_relation_plot.py  test_rereview.py  test_review_handoff.py  test_review_schema.py  test_scene_workflow.py  test_setup.py  test_targeted_revision.py  test_web_gui.py  test_writing_diagnostics.py
tools/: __init__.py  install_local.sh
(+169 files in other folders)
