[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-writer-and-reader-tools"
version = "0.1.5"
description = "Local-first tooling for TheWriterAndReader story workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Private" }
authors = [{ name = "TheWriterAndReader maintainers" }]
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
twr = "cli.twr:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "shared*", "tools*"]
namespaces = true

[tool.setuptools.package-data]
"shared" = ["schemas/*.json", "templates/config.example.yaml", "templates/codex/*.md", "templates/codex/*.toml", "templates/codex/agents/*.toml"]
"tools.review" = ["prompts/*.md", "reviewer-templates/*.md", "standard-reviewers/*.md"]
"tools.wizard" = ["prompts/*.md", "templates/**/*.md", "templates/**/*.yaml"]
"tools.writing" = ["prompts/*.md", "templates/*.md"]
"tools.publish" = ["prompts/*.md", "templates/*.md"]
"tools.web" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
